add temp swagger conf for supertokens
